# litdata

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  Makefile  README.md  get-pip.py  pyproject.toml  requirements.txt  setup.py  status.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codespell_ignore_words.txt
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: ci-checks.yml  ci-testing.yml  docs-build.yml  label-conflicts.yml  release-pypi.yml
_requirements/: docs.txt
docs/doctrees/: index.doctree  readme.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  readme.html  search.html  searchindex.js
docs/html/_sources/: readme.md.txt
docs/html/_static/: documentation_options.js  theme_variables.jinja
docs/html/_static/css/: theme.css
docs/source/: conf.py  index.rst
docs/source/_templates/: theme_variables.jinja
examples/: README.md  config.py  convert.py  create_labelencoder.py  dataloader.py  generate.py  loop.py  model_arc.py  requirements.txt  train.py
examples/getting_started/: README.md  generate.py  stream.py
examples/multi_modal/: README.md  cl_run.py  config.py  convert.py  create_labelencoder.py  dataloader.py  generate.py  loop.py  model_arc.py  requirements.txt  train.py
examples/sine_function_model_prediction/: 01-optimize.py  02-model_training.py  README.md  main.ipynb
lightning_data/: __about__.py  __init__.py
lightning_data/processing/: data_processor.py  functions.py  utilities.py
lightning_data/streaming/: __init__.py  cache.py  client.py  combined.py  config.py  dataloader.py  dataset.py  downloader.py  item_loader.py  reader.py  serializers.py  shuffle.py  writer.py
lightning_data/utilities/: shuffle.py
lit_data/: CHANGELOG.md  __about__.py  __init__.py
lit_data/processing/: data_processor.py  functions.py  utilities.py
lit_data/streaming/: __init__.py  cache.py  client.py  dataset.py  downloader.py  reader.py  serializers.py  shuffle.py  writer.py
litdata/: __about__.py  __init__.py
litdata/processing/: data_processor.py  functions.py  readers.py  utilities.py
litdata/streaming/: __init__.py  cache.py  client.py  combined.py  config.py  dataloader.py  dataset.py  downloader.py  item_loader.py  reader.py  resolver.py  serializers.py  shuffle.py  writer.py
requirements/: docs.txt  extras.txt  requirements.txt  test.txt
src/: lib.rs  litrust.rs  rust_impl.rs
src/lightning/data/: __init__.py
src/lightning/data/processing/: data_processor.py  functions.py
src/lightning/data/streaming/: combined.py  config.py  item_loader.py
src/lightning/data/utilities/: shuffle.py
src/litdata/: __about__.py  __init__.py  _core.pyi  constants.py  debugger.py  helpers.py  imports.py  loggers.py
src/litdata/processing/: data_processor.py  functions.py  readers.py  utilities.py
src/litdata/streaming/: cache.py  client.py  combined.py  compression.py  config.py  dataloader.py  dataset.py  downloader.py  fs_provider.py  item_loader.py  reader.py  resolver.py  sampler.py  serializers.py  shuffle.py  writer.py
src/litdata/utilities/: __init__.py  _pytree.py  breakpoint.py  broadcast.py  dataset_utilities.py  encryption.py  env.py  file_utils.py  format.py  fsspec_helper.py  hf_dataset.py  packing.py  parquet.py  shuffle.py  subsample.py  train_test_split.py
src/litrust/: s3_byte_range_downloader.rs
src/pl_sandbox/: __about__.py  my_module.py
src/processing/: utilities.py
src/rust_impl/: fs.rs  streaming_data_provider.rs  utils.rs
src/rust_impl/fs/: local.rs  s3.rs
src/streaming/: dataloader.py
tests/: __init__.py  conftest.py  test_debugger.py  test_loggers.py  test_sample_module.py
tests/processing/: status.json  test_data_processor.py  test_functions.py  test_readers.py  test_utilities.py
tests/streaming/: test_cache.py  test_client.py  test_combined.py  test_config.py  test_dataloader.py  test_dataset.py  test_downloader.py  test_fs_provider.py  test_item_loader.py  test_parquet.py  test_reader.py  test_resolver.py  test_sampler.py  test_serializer.py  test_writer.py  utils.py
tests/tests_data/processing/: test_functions.py  test_readers.py
tests/tests_data/streaming/: test_cache.py  test_client.py  test_sampler.py  test_writer.py
tests/tests_data/utilities/: test_broadcast.py  test_format.py  test_packing.py  test_shuffle.py
tests/utilities/: test_broadcast.py  test_dataset_utilities.py  test_encryption.py  test_env.py  test_format.py  test_packing.py  test_parquet.py  test_shuffle.py  test_subsample.py  test_train_test_split.py
