[package]
name = "litdata"
version = "0.0.1"
edition = "2021"
authors = ["Lightning AI et al. <pytorch@lightning.ai>"]
license = "Apache-2.0"
description = "Data processing and streaming library for fast AI model training."
documentation = "https://github.com/Lightning-AI/litdata/"
homepage = "https://github.com/Lightning-AI/litdata/"
repository = "https://github.com/Lightning-AI/litdata/"
keywords = ["deep learning", "pytorch", "AI", "streaming", "cloud", "data processing"]
readme = "README.md"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39"] }
aws-config = "1.5.17"
aws-sdk-s3 = "1.77.0"
tokio = { version = "1.43.0", features = ["full"] }
